--- a/TPC_Clinica_equipo-b/presentacion/presentacion.csproj
+++ b/TPC_Clinica_equipo-b/presentacion/presentacion.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="AbmUsuarios.aspx" />
+    <Content Include="AltaUsuario.aspx" />
     <Content Include="assets\img\Carrousel-1.png" />
     <Content Include="assets\img\Carrousel-2.png" />
     <Content Include="Content\misestilos.css" />
@@ -89,6 +90,13 @@
     </Compile>
     <Compile Include="AbmUsuarios.aspx.designer.cs">
       <DependentUpon>AbmUsuarios.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="AltaUsuario.aspx.cs">
+      <DependentUpon>AltaUsuario.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AltaUsuario.aspx.designer.cs">
+      <DependentUpon>AltaUsuario.aspx</DependentUpon>
     </Compile>
     <Compile Include="Especialidad.aspx.cs">
       <DependentUpon>Especialidad.aspx</DependentUpon>
