--- a/TPC_Clinica_equipo-b/dominio/dominio.csproj
+++ b/TPC_Clinica_equipo-b/dominio/dominio.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Especialidad.cs" />
+    <Compile Include="Medico.cs" />
+    <Compile Include="MedicoEspecialidad.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
