--- a/TPC_Clinica_equipo-b/dominio/dominio.csproj
+++ b/TPC_Clinica_equipo-b/dominio/dominio.csproj
@@ -41,11 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Paciente.cs" />
+    <Compile Include="PerfilAcceso.cs" />
+    <Compile Include="Usuario.cs" />
     <Compile Include="Especialidad.cs" />
     <Compile Include="Medico.cs" />
-    <Compile Include="MedicoEspecialidad.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Usuario.cs" />
+    <Compile Include="Persona.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
