--- a/TPC_Clinica_equipo-b/negocio/negocio.csproj
+++ b/TPC_Clinica_equipo-b/negocio/negocio.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccesoDatos.cs" />
+    <Compile Include="MedicoNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuarioNegocio.cs" />
   </ItemGroup>
