Botón editar en lista de médicos

--- a/TPC_Clinica_equipo-b/negocio/negocio.csproj
+++ b/TPC_Clinica_equipo-b/negocio/negocio.csproj
@@ -53,5 +53,8 @@
       <Name>dominio</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="script_db\Clinica_DB.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
