--- a/TPC_Clinica_equipo-b/presentacion/presentacion.csproj
+++ b/TPC_Clinica_equipo-b/presentacion/presentacion.csproj
@@ -72,6 +72,7 @@
     <Content Include="assets\img\Carrousel-1.png" />
     <Content Include="assets\img\Carrousel-2.png" />
     <Content Include="assets\img\Carrousel-3.png" />
+    <Content Include="assets\js\script.js" />
     <Content Include="assets\styles\style.css" />
     <Content Include="Especialidad.aspx" />
     <Content Include="FormularioMedico.aspx" />
