--- a/TPC_Clinica_equipo-b/dominio/dominio.csproj
+++ b/TPC_Clinica_equipo-b/dominio/dominio.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Paciente.cs" />
     <Compile Include="PerfilAcceso.cs" />
     <Compile Include="Turno.cs" />
+    <Compile Include="TurnoVista.cs" />
     <Compile Include="Usuario.cs" />
     <Compile Include="Especialidad.cs" />
     <Compile Include="Medico.cs" />
