--- a/TPC_Clinica_equipo-b/presentacion/presentacion.csproj
+++ b/TPC_Clinica_equipo-b/presentacion/presentacion.csproj
@@ -91,6 +91,7 @@
     <Content Include="TurnoFormulario.aspx" />
     <Content Include="TurnoTrabajo.aspx" />
     <Content Include="TurnoTrabajoLista.aspx" />
+    <Content Include="TurnoTrabajoMedicoLista.aspx" />
     <Content Include="Usuario.aspx" />
     <Content Include="PacienteVerDetalle.aspx" />
     <Content Include="TurnoVerDetalle.aspx" />
@@ -233,6 +234,13 @@
     </Compile>
     <Compile Include="TurnoTrabajoLista.aspx.designer.cs">
       <DependentUpon>TurnoTrabajoLista.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="TurnoTrabajoMedicoLista.aspx.cs">
+      <DependentUpon>TurnoTrabajoMedicoLista.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="TurnoTrabajoMedicoLista.aspx.designer.cs">
+      <DependentUpon>TurnoTrabajoMedicoLista.aspx</DependentUpon>
     </Compile>
     <Compile Include="Usuario.aspx.cs">
       <DependentUpon>Usuario.aspx</DependentUpon>
